--- a/cartisan-base.yml
+++ b/cartisan-base.yml
@@ -1,5 +1,3 @@
-env:
-  dev
 server:
   port: 9001
   servlet:
@@ -8,6 +6,7 @@ spring:
   application:
     name: cartisan-base
   profiles:
+    active: dev
     include: common
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
