--- a/cartisan-base-dev.yml
+++ b/cartisan-base-dev.yml
@@ -17,4 +17,7 @@ spring:
     show-sql: true
   main:
     allow-bean-definition-overriding: true
-
+    
+cartisan:
+  name: Cartisan
+  version: 1.0.0
