--- a/management-staging.yml
+++ b/management-staging.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     include: common
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.2.194:3306/cartisan?characterEncoding=utf-8&useSSL=false
     username: root
     password: truth
