--- a/gateway-staging.yml
+++ b/gateway-staging.yml
@@ -1,4 +1,10 @@
 spring:
+  rabbitmq:
+    host: 192.168.2.194
+    port: 5672
+    username: guest
+    password: guest
+  
   redis:
     host: 192.168.2.194
     port: 6379
@@ -12,8 +18,10 @@ zuul:
       sensitiveHeaders:
   # 全部服务忽略敏感头
   sensitiveHeaders:
+    
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+        
