--- a/base-staging.yml
+++ b/base-staging.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.2.194:3306/cartisan?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.2.194:3306/cartisan-base?characterEncoding=utf-8&useSSL=false
     username: root
     password: truth
   jpa:
-    show-sql: true
+    show-sql: false
 
   rabbitmq:
     host: 192.168.2.194
