--- a/management-staging.yml
+++ b/management-staging.yml
@@ -15,3 +15,8 @@ spring:
   sleuth:
     sampler:
       probability: 0.5 # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
+
+cartisan:
+  signature:
+    enable: false
+    secret: cartisan
